# Todo-Cli-Project

./: README.md  pyproject.toml
.claude/: settings.local.json
.specify/memory/: constitution.md
contracts/: todo-cli-contracts.md
history/adr/: adr-001-technology-stack.md  adr-002-architecture-pattern.md  adr-003-storage-strategy.md
history/prompts/constitution/: 1-create-hackathon-constitution.constitution.prompt.md
history/prompts/tasks/: 2-create-architecture-decision-records.plan.prompt.md
history/prompts/todo-cli/: 3-create-implementation-plan.plan.prompt.md  4-implementation-complete.green.prompt.md
history/prompts/todo-cli-spec/: 2-create-todo-cli-spec.spec.prompt.md  3-create-dev-plan.plan.prompt.md  4-generate-tasks.tasks.prompt.md
specs-history/: data-model.md  phase1-spec-v1.md  plan.md  quickstart.md  research.md  tasks.md
specs-history/checklists/: requirements.md
src/: __init__.py  app.py
src/cli/: todo_cli.py  ui.py
src/models/: task.py
src/services/: todo_service.py
src/todo_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/integration/cli/: test_add_command.py  test_complete_command.py  test_delete_command.py  test_list_command.py  test_update_command.py
tests/unit/models/: test_task.py
tests/unit/services/: test_todo_service.py
todo_cli.egg-info/: SOURCES.txt  entry_points.txt
